delete search query option 'from'
