# internal/server/gateway.go
@@ -197,14 +197,7 @@ func (a *apigateway) GetV2RecordYear(w http.ResponseWriter, r *http.Request, yea
 func (a *apigateway) GetV2RecordYyyymm(w http.ResponseWriter, r *http.Request, yyyymm string, params openapi.GetV2RecordYyyymmParams) {
 	ctx := context.Background()
 
-	// TODO: not yet implemented
 	if params.CategoryId != nil {
-		w.WriteHeader(http.StatusNotImplemented)
-		return
-	}
-
-	// TODO: not yet implemented
-	if params.From != nil {
 		w.WriteHeader(http.StatusNotImplemented)
 		return
 	}
